--- a/Mod2. Probabilidad en varias variables/C04. Variables aleatorias.ipynb
+++ b/Mod2. Probabilidad en varias variables/C04. Variables aleatorias.ipynb
@@ -134,7 +134,37 @@
     "\n",
     "Sea $\\boldsymbol{X}=(X_1,X_2,\\cdots,X_p)$ un vector aleatorio formado por $p$ variables aleatorias univariantes. Para cada $i$ fijo, se define la **esperanza de la variable aleatoria $i$** como $E[X_i]=\\int_{-\\infty}^\\infty xf_{X_i}(x)\\,\\mathrm{d}x$. Este, es el valor de equilibrio de la variable aleatoria.\n",
     "\n",
-    "Por su parte, el **vector de esperanza** de $\\boldsymbol{X}$ es simplemente $$E[\\boldsymbol{X}]=(E[X_1],E[X_2],...,E[X_p]).$$ Este vector representa las coordenadas del punto de equilibrio del vector aleatorio."
+    "Por su parte, el **vector de esperanza** de $\\boldsymbol{X}$ es simplemente $$E[\\boldsymbol{X}]=(E[X_1],E[X_2],...,E[X_p]).$$ Este vector representa las coordenadas del punto de equilibrio del vector aleatorio.\n",
+    "\n",
+    "Por otra parte, si $X$ es una variable aleatoria univariante, su varianza se define como $Var(X)=E[(X-E[X])^2]=E[X^2]-E[X]^2$, y siempre es un número mayor o igual a 0 (solo es 0 si la variable aleatoria es constante; es decir, si todos los elementos de la muestra tienen exactamente la misma característica). A su vez, si $X$ y $Y$ son dos variables aleatorias, entonces $Cov(X,Y)=E[(X-E[X])(Y-E[Y])]=E[XY]-E[X]E[Y]$, en tanto que $Corr(X,Y)=\\frac{Var(X,Y)}{sd(X)sd(Y)}$, donde $sd$ de una variable aleatoria es la raíz cuadrada de su varianza.\n",
+    "\n",
+    "La **matriz de covarianza** de un vector aleatorio (es decir, una variable aleatoria multivariante) $X=(X_1,X_2,...,X_m)$ es una matriz simétrica y semidefinida positiva donde los elementos de la diagonal principal son las varianzas de las $X_i$ y los elementos fuera de la diagonal principal son las covarianzas.\n",
+    "\n",
+    "Más aún, si $X=(X_1,X_2,...,X_p)$ y $Y=(Y_1,Y_2,...,Y_m)$ son dos vectores aleatorios (notar que no necesariamente del mismo tamaño) entonces la matriz de covarianza de $X$ y $Y$ es de tamaño $p\\times m$ se define con $Cov(X_i,Y_j)$. En símbolos concretos, si $p=2$ y $q=3$, entonces: \n",
+    "\n",
+    "$$Cov(X,Y)=\\left(\\begin{array}{ccc}Cov(X_1,Y_1)&Cov(X_1,Y_2)&Cov(X_1,Y_3)\\\\Cov(X_2,Y_1)&Cov(X_2,Y_2)&Cov(X_2,Y_3)\\end{array}\\right)$$\n",
+    "\n",
+    "Análogamente se define su correlación.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Esperanza condicional\n",
+    "\n",
+    "Si $X,Y$ son dos variables aleatorias unidimensionales, el valor esperado de $X$ dado $Y$ se define como $$E_{X|Y}[u|v]=\\int xf_{x|y}(v|x)\\,\\mathrm{d}x,$$ y es una función que depende de $v$.\n",
+    "\n",
+    "Esta tiene varias propiedades interesantes, que son mas o menos claras cuando se le ve desde el punto de vista totalmente matemático: si $(\\Omega,\\mathcal{F},P)$ es un espacio de probabilidad, $X$ es una variable aleatorio *con varianza finita* (es decir, $X\\in L^2(\\Omega)$, y $\\mathcal{G}$ es una subálgebra de $\\mathcal{F}$, entonces $E[X|\\mathcal{G}]$ es la única variable aleatoria tal que $$\\int_G X\\,\\mathrm{d}P=\\int_G E[X|\\mathcal{G}]\\,\\mathrm{d}P$$ para toda $G\\in\\mathcal{G}$.\n",
+    "\n",
+    "Esto es: $E[X|\\mathcal{G}]$ es la proyección ortogonal (en el espacio de Hilbert $L^2(\\Omega)$) de $X$ sobre las funciones $\\mathcal{G}$-medibles."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"esp_cond.png\">"
    ]
   }
  ],
