--- a/Mod2. Probabilidad en varias variables/C04. Variables aleatorias.ipynb
+++ b/Mod2. Probabilidad en varias variables/C04. Variables aleatorias.ipynb
@@ -166,6 +166,15 @@
    "source": [
     "<img src=\"esp_cond.png\">"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Observaciones teóricas**\n",
+    "\n",
+    "<img src=\"observaciones.png\">"
+   ]
   }
  ],
  "metadata": {
