--- a/Mod2. Probabilidad en varias variables/C05.4 Distribuciones importantes (Mixturas y cópulas).ipynb
+++ b/Mod2. Probabilidad en varias variables/C05.4 Distribuciones importantes (Mixturas y cópulas).ipynb
@@ -45,7 +45,7 @@
     "\n",
     "* Para cada $u,v\\in [0,1]$ se tiene $C(u,1)=u$ y $C(1,v)=v$.\n",
     "\n",
-    "* Para cada $(u_1,v_1),(u_2,v_2)\\in [0,1]^2$ con $u_1\\le u_2$ y $v_1\\le v_2$ se cumple $C(u_2,v_2)-C(u_1,v_1)\\ge C(u_2,v_1)+C(u_1,v_2)$\n",
+    "* Para cada $(u_1,v_1),(u_2,v_2)\\in [0,1]^2$ con $u_1\\le u_2$ y $v_1\\le v_2$ se cumple $C(u_2,v_2)+C(u_1,v_1)\\ge C(u_2,v_1)+C(u_1,v_2)$\n",
     "\n",
     "<img src=\"copulas.png\">\n",
     "\n",
@@ -68,7 +68,7 @@
     "\n",
     "Consideremos $F_Z$ la función de distribución de una Normal univariante estándar.\n",
     "\n",
-    "Sea $F_X$ la función de distribución conjunta de $X$, un vector aleatorio $𝑝$-dimensional, con vector de medias $\\mu$ y matriz de correlaciones $R$.\n",
+    "Sea $F_X$ la función de distribución conjunta de $X$, un vector aleatorio $p$-dimensional, con vector de medias $\\mu$ y matriz de correlaciones $R$.\n",
     "\n",
     "Entonces la función: $C^{(G)}$ dada por \n",
     "\n",
