--- a/Mod2. Probabilidad en varias variables/C05.4 Distribuciones importantes (Mixturas y cópulas).ipynb
+++ b/Mod2. Probabilidad en varias variables/C05.4 Distribuciones importantes (Mixturas y cópulas).ipynb
@@ -39,7 +39,7 @@
     "\n",
     "Sin embargo, a partir de conocer las marginales no se puede obtener, en general, la distribución conjunta (a menos que tengamos independencia, pues recordemos que en ese caso la distribución conjunta es el producto de las distribuciones marginales).\n",
     "\n",
-    "El concepto de **cópula** sirve para conectar funciones de densidad marginales con funciones de densidad conjunta. Por simplicidad vamos a centrarnos en el caso bidimensional $p=2$. Una cópula bidimensional es una función $𝐶:[0,1]^2\\to[0,1]$ con las siguientes propiedades:\n",
+    "El concepto de **cópula** sirve para conectar funciones de densidad marginales con funciones de densidad conjunta. Por simplicidad vamos a centrarnos en el caso bidimensional $p=2$. Una cópula bidimensional es una función $C:[0,1]^2\\to[0,1]$ con las siguientes propiedades:\n",
     "\n",
     "* Para cada $u,v\\in [0,1]$ se tiene $C(u,0)=C(0,v)=0$.\n",
     "\n",
