--- a/Mod2. Probabilidad en varias variables/C06.2 Inferencia Estadística (Máxima verosimilitud).ipynb
+++ b/Mod2. Probabilidad en varias variables/C06.2 Inferencia Estadística (Máxima verosimilitud).ipynb
@@ -51,11 +51,17 @@
    "source": [
     "## MLE de una normal\n",
     "\n",
-    "Sean $x_1,x_2,...,x_n$ una muestra aleatoria de una normal multivariante $N_p(\\vec{\\mu},\\Sigma)$. Bajo la notación de la sección de arriba se tiene $\\Theta=(\\vec{mu},\\Sigma)$.\n",
+    "Sean $x_1,x_2,...,x_n$ una muestra aleatoria de una normal multivariante $N_p(\\vec{\\mu},\\Sigma)$. Bajo la notación de la sección de arriba se tiene $\\Theta=(\\vec{\\mu},\\Sigma)$.\n",
+    "\n",
+    "En este caso, la función $L$ (el logaritmo de la función de verosimilitud) viene dada de la siguientes maneras:\n",
+    "\n",
+    "$$\\begin{eqnarray}L(\\vec{\\mu},\\Sigma)&=&-\\frac{np}{2}\\log(2\\pi)-\\frac{n}{2}\\log(|\\Sigma|)-\\frac{1}{2}\\sum_{i=1}^n(x_{i,\\cdot}-\\vec{\\mu})^T\\Sigma^{-1}(x_{i,\\cdot}-\\vec{\\mu})\\\\&=&-\\frac{n}{2}\\log(|\\Sigma|)-\\frac{n}{2}tr(\\Sigma^{-1}S)-\\frac{n}{2}(\\overline{x}-\\vec{\\mu})^T\\Sigma^{-1}(\\overline{x}-\\vec{\\mu})\\end{eqnarray}$$\n",
+    "\n",
+    "donde $S=\\sum_{i=1}^n(x_{i\\cdot}-\\vec{\\mu})^T(x_{i\\cdot}-\\vec{\\mu})$.\n",
     "\n",
     "Entonces los estimadores de máxima verosimilitud de $\\vec{\\mu}$ y $\\Sigma$ son \n",
     "\n",
-    "$$\\widehat{\\vec{\\mu}}=\\overline{x}\\,\\,(el\\,vector\\,muestral\\,de\\,medias)\\,\\,y$$\n",
+    "$$\\widehat{\\vec{\\mu}}=\\overline{x}\\,\\,\\,\\,y$$\n",
     "\n",
     "$$\\widehat{\\Sigma}=\\frac{1}{n}\\sum_{j=1}^n(x_{i\\cdot}-\\overline{x})(x_{i\\cdot}-\\overline{x})^T.$$"
    ]
