--- a/Mod2. Probabilidad en varias variables/C06.4 Inferencia Estadística (test de hipótesis--matriz de covarianas).ipynb
+++ b/Mod2. Probabilidad en varias variables/C06.4 Inferencia Estadística (test de hipótesis--matriz de covarianas).ipynb
@@ -71,6 +71,17 @@
     "En este caso, el estimador de máxima verosimilitud para $\\sigma^2$ es $\\widehat{\\sigma}^2=\\frac{tr(S)}{p}$ y obtenemos $\\lambda=np(\\log(\\widehat{\\sigma}^2)-\\log|S|)$, que tiene una distribución, para $n$ grande, de chi cuadrada con $\\frac{(p+2)(p-1)}{2}$ grados de libertad.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Observacion.** En R, el cálculo de los elemntos de la diagonal de una matriz cuadrada $A$ y su traza es hace con las siguientes instrucciones:\n",
+    "\n",
+    "elementos de la diagonal: ``diag(A)``\n",
+    "\n",
+    "traza: ``sum(diag(A))``\n"
+   ]
   }
  ],
  "metadata": {
